lesion images: fix overflowing image wall on Firefox
Specifying 'overflow: auto' for the image wall's parent container causes the
vertical scrollbar to appear as expected in the image wall container in Firefox.

--- a/web_external/stylesheets/body/imagesPage.styl
+++ b/web_external/stylesheets/body/imagesPage.styl
@@ -80,6 +80,9 @@ $dataAxisColor = #333333
                 -webkit-filter $disabledImageFilter
                 filter $disabledImageFilter
 
+    .isic-images-image-container
+      overflow auto
+
     /* Image wall */
     #isic-images-imageWall
         overflow-y auto
